--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,5 +1,6 @@
 <app-form-log 
- (envRes)="captaResultado($event)"></app-form-log>
+ (envRes)="captaResultado($event)" ></app-form-log>
+ 
 <div class="relative isolate px-6 pt-14 lg:px-8">
   <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0" *ngIf="resultadoP">
     <button
@@ -30,14 +31,14 @@
         <span class="sr-only">Open user menu</span>
         <img
           class="h-12 w-12 rounded-full"
-          src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+          src="{{perfilvalor.image}}"
           alt=""
         />
       </button>
        <!-- Dropdown menu -->
     <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
       <div class="px-4 py-3">
-        <span class="block text-sm text-gray-900 dark:text-white">    {{resultadoP}}</span>
+        <span class="block text-sm text-gray-900 dark:text-white"> {{perfilvalor.firstName}}</span>
         <span class="block text-sm  text-gray-500 truncate dark:text-gray-400"></span>
       </div>
       <ul class="py-2" aria-labelledby="user-menu-button">
@@ -65,7 +66,7 @@
   ></div>
   <div class="container mx-auto p-2 sm:py-48 lg:py-48">
     <div class="text-center" *ngFor="let item of datas" >
-      {{role}}
+
       <div *ngIf="item.role==role">
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">
           {{ item.name }} 
