--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,28 @@
-<p>not-found works!</p>
+
+
+<div id="sticky-banner" tabindex="-1" class=" top-0 h-[70%] start-0 z-50 flex justify-between w-full p-4 border-b border-gray-200 bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
+    <div class="flex items-center mx-auto">
+        <div class="flex items-baseline text-sm font-normal text-gray-500 dark:text-gray-400">
+            <span class="flex p-1 me-3 bg-gray-200 rounded-full dark:bg-gray-600 w-6 h-6 items-center justify-center flex-shrink-0">
+                <svg class="w-3 h-3 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 19">
+                    <path d="M15 1.943v12.114a1 1 0 0 1-1.581.814L8 11V5l5.419-3.871A1 1 0 0 1 15 1.943ZM7 4H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2v5a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2V4ZM4 17v-5h1v5H4ZM16 5.183v5.634a2.984 2.984 0 0 0 0-5.634Z"/>
+                </svg>
+                <span class="sr-only">Light bulb</span>
+            </span>
+            <div>
+                <h1>PAGINA NO ENCONTRADA</h1>
+                <span> La pagina que estas tratando de acceder no existe o no esta disponible en este momento. (ERROR 404)</span>
+                <div class="flex items-center">
+                    <a href="javascript:history.go(-1);" class="flex-shrink-0 inline-flex justify-center w-7 h-7 items-center text-gray-400 hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 dark:hover:bg-gray-600 dark:hover:text-white">
+                        <fa-icon [icon]="faReplyd" style="font-size: 16px;display: block;"></fa-icon>
+                        
+                    </a>
+                </div>
+            </div>
+         
+           </div>
+           
+    </div>
+   
+</div>
+
