--- a/src/app/perfil-user/perfil-user.component.html
+++ b/src/app/perfil-user/perfil-user.component.html
@@ -1,31 +1,128 @@
-<p>{{perfilvalor}}</p>
-<form class="max-w-sm mx-auto">
-    <div class="mb-5">
-      <label for="id" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">ID User</label>
-      <input type="text" id="id" #id  ngModel value="{{perfilvalor.id}}" name="id" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="name@flowbite.com" required />
-    </div>
-    <div class="mb-5">
-      <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-        First Name User
-      </label>
-      <input type="text" id="name" #name  ngModel value="{{perfilvalor.firstName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
-    </div>
-    <div class="mb-5">
-        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-          Last Name User
-        </label>
-        <input type="text" id="lastname" #lastname  ngModel value="{{perfilvalor.lastName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+
+<div class="container mb-10">
+    <h3>Perfil de {{perfilvalor.firstName}}</h3>
+    <form class="" >
+        <div id="accordion-open" data-accordion="open">
+        <h5 id="accordion-open-heading-1">
+          <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target="#accordion-open-body-1" aria-expanded="true" aria-controls="accordion-open-body-1">
+            <span class="flex items-center"><fa-icon
+                [icon]="faUserAlt" class="text-xl mr-2"></fa-icon>Datos Personales</span>
+            <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+            </svg>
+          </button>
+        </h5>
+        <div id="accordion-open-body-1" class="hidden" aria-labelledby="accordion-open-heading-1">
+          <div class="p-5 border  border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+            <div class="md:flex  justify-between">
+                <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="id" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">ID User</label>
+                    <input type="text"  id="id" #id  disabled ngModel value="{{perfilvalor.id}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="name@flowbite.com" required />
+                </div>
+              <div class="mb-5 mr-1 md:w-2/4">
+                <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                  First Name User
+                </label>
+                <input type="text" id="name" #name ngModel value="{{perfilvalor.firstName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+              </div>
+            </div>
+              <div class="md:flex  justify-between">
+                <div class="mb-5 mr-1 md:w-2/4">
+                  <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Last Name User
+                  </label>
+                  <input type="text" id="lastname" #lastname  ngModel value="{{perfilvalor.lastName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                 </div>
+                <div class="mb-5 mr-1 md:w-2/4">
+                  <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Age
+                  </label>
+                  <input type="text" id="age" #age  ngModel value="{{perfilvalor.age}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+            </div>
+            <div class="md:flex  justify-between">
+                <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Birthdate
+                    </label>
+                    <input type="date" id="birthdate" #birthdate  ngModel value="{{perfilvalor.birthDate |  date:'yyyy-MM-dd'}}" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+                    <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Email
+                    </label>
+                    <input type="email" id="email" #email  ngModel value="{{perfilvalor.email}}" disabled class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+            </div>
+            <div class="md:flex  justify-between">
+                <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Genero
+                    </label>
+                    <select id="gender" #gender  ngModel   class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required >
+                        <option value="fermale" >Fermenina</option>
+                        <option value="male" >Masculino</option>
+                    </select>
+                </div>
+                <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Imagen de Perfil
+                    </label>
+                   <input type="file" id="image" name="image"  #image  ngModel    accept=".jpg, .jpeg, .png"/>
+               
+                </div>
+            </div>
+          </div>
+        </div>
+        <h5 id="accordion-open-heading-2">
+          <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target="#accordion-open-body-2" aria-expanded="false" aria-controls="accordion-open-body-2">
+            <span class="flex items-center">
+                <fa-icon
+                [icon]="faAddressBook" class="text-xl mr-2"></fa-icon>Contacto</span> 
+                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                  </svg>
+          </button>
+        </h5>
+        <div id="accordion-open-body-2" class="hidden" aria-labelledby="accordion-open-heading-2">
+          <div class="p-5 border border-gray-200 dark:border-gray-700">
+                      <div class="mb-5 mr-1 md:w-2/4">
+                <label for="id" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
+                <input type="tel" id="id" #phone  ngModel value="{{perfilvalor.phone}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" placeholder="" required />
+              </div>
+                        <div class="mb-5 mr-1 md:w-2/4">
+                <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    Address
+                </label>
+                <input type="text" id="name" #address  ngModel value="{{perfilvalor.address.address}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+              </div>
+                        <div class="mb-5 mr-1 md:w-2/4">
+                  <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    City
+                  </label>
+                  <input type="text" id="city" #city  ngModel value="{{perfilvalor.address.city}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+                          <div class="mb-5 mr-1 md:w-2/4">
+                  <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    State
+                  </label>
+                  <input type="text" id="state" #state  ngModel value="{{perfilvalor.address.state}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+                          <div class="mb-5 mr-1 md:w-2/4">
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        Country
+                    </label>
+                    <input type="text" id="country" #country  ngModel value="{{perfilvalor.address.country}}" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                </div>
+          </div>
+        </div>
+       
       </div>
-    <div class="mb-5">
-      <label for="repeat-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Repeat password</label>
-      <input type="password" id="repeat-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
-    </div>
-    <div class="flex items-start mb-5">
-      <div class="flex items-center h-5">
-        <input id="terms" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
-      </div>
-      <label for="terms" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a></label>
-    </div>
-    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register new account</button>
+      
+    <button type="submit" class="uppercase mt-5 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+       Save 
+    </button>
+   
   </form>
-  
+
+</div>
