--- a/src/app/perfil-user/perfil-user.component.html
+++ b/src/app/perfil-user/perfil-user.component.html
@@ -1,7 +1,7 @@
 
 <div class="container mb-10">
     <h3>Perfil de {{perfilvalor.firstName}}</h3>
-    <form class="" >
+    <form class=""  >
         <div id="accordion-open" data-accordion="open">
         <h5 id="accordion-open-heading-1">
           <button type="button" class="flex items-center justify-between w-full p-5 font-medium rtl:text-right text-gray-500 border border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800 gap-3" data-accordion-target="#accordion-open-body-1" aria-expanded="true" aria-controls="accordion-open-body-1">
@@ -23,7 +23,7 @@
                 <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                   First Name User
                 </label>
-                <input type="text" id="name" #name ngModel value="{{perfilvalor.firstName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                <input type="text" id="name"  #firstName ngModel  value="{{perfilvalor.firstName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
               </div>
             </div>
               <div class="md:flex  justify-between">
@@ -119,10 +119,10 @@
        
       </div>
       
-    <button type="submit" class="uppercase mt-5 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+    <button type="button" (click)="onSubmit(firstName.value)" class="uppercase mt-5 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
        Save 
     </button>
    
   </form>
-
+{{firstName.value}}
 </div>
