--- a/src/app/perfil-user/perfil-user.component.html
+++ b/src/app/perfil-user/perfil-user.component.html
@@ -31,13 +31,13 @@
                   <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                     Last Name User
                   </label>
-                  <input type="text" id="lastname" #lastname  ngModel value="{{perfilvalor.lastName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                  <input type="text" id="lastname" #lastName  ngModel value="{{perfilvalor.lastName}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
                  </div>
                 <div class="mb-5 mr-1 md:w-2/4">
                   <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                     Age
                   </label>
-                  <input type="text" id="age" #age  ngModel value="{{perfilvalor.age}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
+                  <input type="number" id="age" #age  ngModel value="{{perfilvalor.age}}"  class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required />
                 </div>
             </div>
             <div class="md:flex  justify-between">
@@ -119,7 +119,7 @@
        
       </div>
       
-    <button type="button" (click)="onSubmit(firstName.value)" class="uppercase mt-5 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+    <button type="button" (click)="onSubmit(firstName.value,lastName.value)" class="uppercase mt-5 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
        Save 
     </button>
    
