--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,14 +46,14 @@
       <li *ngFor="let item of navegation" class="mb-1  ">
           <a
           href="{{item.url}}"
-          class="rounded-md bg-gray-900 px-3 py-2 text-sm justify-between flex flex-auto text-white w-26"
+          class="rounded-md bg-gray-900 px-3 py-2 text-sm justify-between flex flex-auto text-white md:w-28"
           aria-current="page"><span>{{item.titulo}}</span>
           <fa-icon
           [icon]="faCoffee" *ngIf="item.children.length!==0"
           style="font-size: 13px;display: block;width: auto;text-align: end;">
           </fa-icon>
           </a>
-          <ul class="py-0 hidden relative md:absolute z-50 bg-gray-500  ml-[0.4rem]  md:w-[6.3rem]" *ngIf="item.children.length!==0">
+          <ul class="py-0 hidden relative md:absolute z-50 bg-gray-500  mx-[0.4rem]  md:w-[6.3rem]" *ngIf="item.children.length!==0">
           <li *ngFor="let child of item.children" class=""  >
             <a href="" *ngIf="child.childtitle!=''" class="block text-sm text-left px-3 py-2 text-white hover:bg-[#111827d9] dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
               {{
