--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -3,22 +3,7 @@
  
 <div class="relative isolate px-6 pt-14 lg:px-8">
   <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0" *ngIf="resultadoP">
-    <button
-      type="button"
-      class="relative rounded-full mt-8 ml-4.5 bg-gray-800 p-1 text-gray-400 h-max hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-    >
-      <fa-icon
-        [icon]="faBell"
-        style="font-size: 18px;display: block;width: 23px;height: 23px;padding: -5px;"
-      ></fa-icon>
-      <span class="sr-only">Notifications</span>
-      <div
-        class="absolute inline-flex items-center justify-center w-6 h-6 text-[10px] font-bold text-white bg-red-500 border-1 hover:border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900"
-      >
-        {{ datas.length }}
-      </div>
-    </button>
-
+    
     <!-- Profile dropdown -->
     <div class="relative ml-1">
       <div>
@@ -37,9 +22,26 @@
       </button>
        <!-- Dropdown menu -->
     <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
+      <button
+      type="button"
+      style="top: -2rem;left: 3rem;"
+      class="relative rounded-full  absolute  bg-gray-800 p-1 text-gray-400 h-max hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+    >
+      <fa-icon
+        [icon]="faBell"
+        style="font-size: 18px;display: block;width: 23px;height: 23px;padding: -5px;"
+      ></fa-icon>
+      <span class="sr-only">Notifications</span>
+      <div
+        class="absolute inline-flex items-center justify-center w-6 h-6 text-[10px] font-bold text-white bg-red-500 border-1 hover:border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900"
+      >
+        {{ datas.length }}
+      </div>
+    </button>
+<div>
       <div class="px-4 py-3">
-        <span class="block text-sm text-gray-900 dark:text-white"> {{perfilvalor.firstName}}</span>
-        <span class="block text-sm  text-gray-500 truncate dark:text-gray-400"></span>
+        <span class="block text-sm text-gray-900 dark:text-white" style="line-height: .7;"> {{perfilvalor.firstName}}</span>
+        <span class="block text-sm  text-gray-500 truncate dark:text-gray-400"> {{perfilvalor.lastName}}</span>
       </div>
       <ul class="py-2" aria-labelledby="user-menu-button">
         <li>
@@ -55,7 +57,8 @@
           <a (click)="SignOut()" class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
         </li>
       </ul>
-      </div>
+    </div>
+  </div>
     
       </div>
     </div>
